[2:ci:format] Add code formatting
- make target
- github action intgration

> Solves #2

--- a/.github/workflows/push-guard.yaml
+++ b/.github/workflows/push-guard.yaml
@@ -3,7 +3,7 @@ jobs:
   format-check-build-test:
     runs-on: ubuntu-latest
     # container:
-    #   image: artfulbytes/msp430-gcc-9.3.1.11:latest
+    #   image: sinixnd/tak:latest
     # env:
     #   TOOLS_PATH: /home/ubuntu/dev/tools
     steps:
