hotfix(CI): Fixed push-guard workflow
Changed build mode because cppcheck (used in debug mode) is not
available in github workflow

--- a/.github/workflows/push-guard.yaml
+++ b/.github/workflows/push-guard.yaml
@@ -14,5 +14,5 @@ jobs:
           submodules: "true"
       # - run: make format && git diff --quiet
       # - run: make cppcheck
-      - run: make debug
+      - run: make release
       # - run: make tests
